--- a/plugins/android/src/org/jetbrains/android/compiler/artifact/AndroidArtifactPropertiesEditor.form
+++ b/plugins/android/src/org/jetbrains/android/compiler/artifact/AndroidArtifactPropertiesEditor.form
@@ -199,7 +199,7 @@
                   <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="&amp;Choose existing..."/>
+                  <text value="C&amp;hoose existing..."/>
                 </properties>
               </component>
               <hspacer id="ed5f1">
