--- a/plugins/android/testData/dom/res/values/attrs.xml
+++ b/plugins/android/testData/dom/res/values/attrs.xml
@@ -3,5 +3,7 @@
         <attr name="text" format="string" />
         <attr name="textColor" format="color" />
         <attr name="textSize" format="dimension" />
+        <attr name="intAttr" format="integer"/>
+        <attr name="intAttr1" format="integer|reference"/>
     </declare-styleable>
 </resources>
