--- a/plugins/android/testData/dom/layout/idref2.xml
+++ b/plugins/android/testData/dom/layout/idref2.xml
@@ -1,3 +1,3 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android">
-  <TextView android:layout_alignBaseline="@android:id/no_permiss<caret>"/>
+  <TextView android:layout_alignBaseline="@android:id/closeBut<caret>"/>
 </RelativeLayout>
