--- a/plugins/android/testData/dom/layout/idref2_after.xml
+++ b/plugins/android/testData/dom/layout/idref2_after.xml
@@ -1,3 +1,3 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android">
-  <TextView android:layout_alignBaseline="@android:id/no_permissions"/>
+  <TextView android:layout_alignBaseline="@android:id/closeButton"/>
 </RelativeLayout>
