--- a/plugins/android/testData/dom/layout/layoutAttrs2.xml
+++ b/plugins/android/testData/dom/layout/layoutAttrs2.xml
@@ -1,3 +1,3 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              style="@android:style/WindowTitleBackground">
+              style="@android:style/MediaButton">
 </LinearLayout>
