copyright: allow string separator (IDEA-89218)

--- a/plugins/copyright/src/com/maddyhome/idea/copyright/ui/TemplateCommentPanel.form
+++ b/plugins/copyright/src/com/maddyhome/idea/copyright/ui/TemplateCommentPanel.form
@@ -189,7 +189,7 @@
                 </constraints>
                 <properties>
                   <labelFor value="679a0"/>
-                  <text value="Separator char"/>
+                  <text value="Separator"/>
                 </properties>
               </component>
               <component id="30865" class="javax.swing.JCheckBox" binding="cbBox">
