--- a/platform/platform-impl/src/com/intellij/openapi/command/impl/CannotUndoReportDialog.form
+++ b/platform/platform-impl/src/com/intellij/openapi/command/impl/CannotUndoReportDialog.form
@@ -22,14 +22,17 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="none"/>
+        <clientProperties>
+          <BorderFactoryClass class="java.lang.String" value="com.intellij.ui.IdeBorderFactory$PlainSmallWithoutIndentWithoutInsets"/>
+        </clientProperties>
+        <border type="none" title="Problem files"/>
         <children>
-          <scrollpane class="com.intellij.ui.components.JBScrollPane" id="2538c">
+          <scrollpane id="2538c" class="com.intellij.ui.components.JBScrollPane">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
-            <border type="empty" title="Problem files"/>
+            <border type="none"/>
             <children>
               <component id="dbf20" class="com.intellij.ui.components.JBList" binding="myProblemFilesList">
                 <constraints/>
