SVN: new pool enhancements; some tests; however, use simple variant (just no-keep connections and create any number of them) by default

--- a/platform/vcs-impl/src/com/intellij/openapi/vcs/configurable/VcsGeneralConfigurationPanel.form
+++ b/platform/vcs-impl/src/com/intellij/openapi/vcs/configurable/VcsGeneralConfigurationPanel.form
@@ -221,7 +221,7 @@
                 <constraints/>
                 <properties>
                   <labelFor value="aec57"/>
-                  <text value="Show patch in explorer after creation:"/>
+                  <text value="Show patch in Explorer after creation:"/>
                 </properties>
               </component>
               <component id="aec57" class="javax.swing.JComboBox" binding="myOnPatchCreation">
