--- a/java/java-impl/src/com/intellij/application/options/CodeStyleImportForm.form
+++ b/java/java-impl/src/com/intellij/application/options/CodeStyleImportForm.form
@@ -12,9 +12,7 @@
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties>
-        </properties>
-        <border type="none"/>
+        <border type="empty"/>
         <children>
           <grid id="72ab4" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
