--- a/xml/impl/src/com/intellij/application/options/CodeStyleXmlPanel.form
+++ b/xml/impl/src/com/intellij/application/options/CodeStyleXmlPanel.form
@@ -15,7 +15,7 @@
         <properties>
           <horizontalScrollBarPolicy value="31"/>
         </properties>
-        <border type="none"/>
+        <border type="empty"/>
         <children>
           <grid id="265f" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
@@ -155,7 +155,7 @@
                   <component id="18182" class="javax.swing.JTextField" binding="myKeepBlankLines">
                     <constraints>
                       <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="50" height="28"/>
+                        <preferred-size width="50" height="-1"/>
                       </grid>
                     </constraints>
                     <properties>
